--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,21 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
-    android:background="@drawable/bgligachemp"
+    android:background="@drawable/bg_fragment_3"
+    android:padding="@dimen/main_padding"
     tools:context=".GameFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/white"
-        android:text="Fragment game" />
-
     <Button
-        android:id="@+id/go_main_fragment"
+        android:id="@+id/btn_go_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:text="go main" />
 
 </FrameLayout>
