--- a/app/src/main/res/layout/fragment_ladder.xml
+++ b/app/src/main/res/layout/fragment_ladder.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_fragment_2"
+    android:padding="@dimen/main_padding"
     tools:context=".LadderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/btn_go_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="go main" />
 
 </FrameLayout>
