--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,14 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_fragment_3"
+    android:background="@drawable/bg_game"
     android:padding="@dimen/main_padding"
     tools:context=".GameFragment">
 
-    <Button
-        android:id="@+id/btn_go_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="go main" />
 
 </FrameLayout>
