--- a/app/src/main/res/layout/fragment_ladder.xml
+++ b/app/src/main/res/layout/fragment_ladder.xml
@@ -3,14 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_fragment_2"
+    android:background="@drawable/bg_ladder"
     android:padding="@dimen/main_padding"
     tools:context=".LadderFragment">
-
-    <Button
-        android:id="@+id/btn_go_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="go main" />
 
 </FrameLayout>
