--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,25 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_fragment_1"
+    android:background="@drawable/bg_main"
     android:padding="@dimen/main_padding"
     tools:context=".MainFragment">
-
-    <Button
-        android:id="@+id/btn_go_game"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="go game"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_go_ladder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="go ladder"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_go_game" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
